<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingVertical="7dp">

    <ImageView
        android:id="@+id/notification_play"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="1"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_play" />

    <ImageView
        android:id="@+id/notification_pause"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="1"
        android:contentDescription="@string/pause"
        android:src="@drawable/ic_pause" />

    <ImageView
        android:id="@+id/notification_volume_down"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="1"
        android:contentDescription="@string/volume_down"
        android:src="@drawable/ic_volume_down" />

    <ImageView
        android:id="@+id/notification_volume_up"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="1"
        android:contentDescription="@string/volume_up"
        android:src="@drawable/ic_volume_up" />

    <ImageView
        android:id="@+id/notification_close"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="1"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close" />

</LinearLayout>
