<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ChooseLayoutFragment">

    <fragment
        android:id="@+id/ChooseLayoutFragment"
        android:name="tk.burdukowsky.mpc_hc_android.ChooseLayoutFragment">

        <action
            android:id="@+id/action_choose_layout_to_stretch"
            app:destination="@id/StretchLayoutFragment"
            app:popUpTo="@id/ChooseLayoutFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_choose_layout_to_simple"
            app:destination="@id/SimpleLayoutFragment"
            app:popUpTo="@id/ChooseLayoutFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_choose_layout_to_settings"
            app:destination="@id/SettingsFragment"
            app:popUpTo="@id/ChooseLayoutFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/StretchLayoutFragment"
        android:name="tk.burdukowsky.mpc_hc_android.StretchLayoutFragment"
        android:label="@string/stretch_layout_fragment_label"
        tools:layout="@layout/fragment_stretch_layout" />

    <fragment
        android:id="@+id/SimpleLayoutFragment"
        android:name="tk.burdukowsky.mpc_hc_android.SimpleLayoutFragment"
        android:label="@string/simple_layout_fragment_label"
        tools:layout="@layout/fragment_simple_layout" />

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="tk.burdukowsky.mpc_hc_android.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings" />

</navigation>